--- a/Samples/ChatFMX/ChatFMX.dproj
+++ b/Samples/ChatFMX/ChatFMX.dproj
@@ -418,6 +418,28 @@
         <DCCReference Include="ChatFMX.Frame.Attachment.AudioPlaylist.pas">
             <Form>FrameAttachmentAudioPlaylist</Form>
         </DCCReference>
+        <DCCReference Include="ChatFMX.Frame.Attachment.Keyboard.pas">
+            <Form>FrameAttachmentKeyboard</Form>
+            <FormType>fmx</FormType>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
+        <DCCReference Include="ChatFMX.Frame.Window.Geo.pas">
+            <Form>FrameWindowGeo</Form>
+            <FormType>fmx</FormType>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
+        <DCCReference Include="ChatFMX.Frame.Window.OpenLink.pas">
+            <Form>FrameWindowLink</Form>
+            <FormType>fmx</FormType>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
+        <DCCReference Include="ChatFMX.Frame.Attachment.PinnedMessage.pas">
+            <Form>FrameAttachmentPinnedMessage</Form>
+        </DCCReference>
+        <DCCReference Include="ChatFMX.Classes.pas"/>
+        <DCCReference Include="ChatFMX.Frame.Attachment.Story.pas">
+            <Form>FrameAttachmentStory</Form>
+        </DCCReference>
         <RcItem Include="Res\im_favorites_100.png">
             <ResourceType>RCDATA</ResourceType>
             <ResourceId>im_favorites_100</ResourceId>
@@ -713,14 +735,13 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployFile LocalName="Android\Debug\AndroidManifest.xml" Configuration="Debug" Class="ProjectAndroidManifest"/>
-                <DeployFile LocalName="$(BDS)\bin\Artwork\Android\FM_LauncherIcon_72x72.png" Configuration="Debug" Class="Android_LauncherIcon72"/>
                 <DeployFile LocalName="Android\Debug\styles-v21.xml" Configuration="Debug" Class="AndroidSplashStylesV21">
                     <Platform Name="Android">
                         <RemoteName>styles.xml</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
+                <DeployFile LocalName="Android\Debug\AndroidManifest.xml" Configuration="Debug" Class="ProjectAndroidManifest"/>
                 <DeployFile LocalName="Android\Release\AndroidManifest.xml" Configuration="Release" Class="ProjectAndroidManifest">
                     <Platform Name="Android">
                         <Overwrite>true</Overwrite>
@@ -732,6 +753,7 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
+                <DeployFile LocalName="$(BDS)\bin\Artwork\Android\FM_LauncherIcon_72x72.png" Configuration="Debug" Class="Android_LauncherIcon72"/>
                 <DeployFile LocalName="Res\msg_warning.png" Configuration="Debug" Class="ProjectFile">
                     <Platform Name="Android">
                         <RemoteDir>.\assets\internal\</RemoteDir>
