--- a/Samples/ChatFMX/Android/Release/AndroidManifest.xml
+++ b/Samples/ChatFMX/Android/Release/AndroidManifest.xml
@@ -5,8 +5,8 @@
     android:versionCode="1"
     android:versionName="1.0.0"
     android:installLocation="auto">
-    <uses-sdk android:minSdkVersion="23" android:targetSdkVersion="32" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-sdk android:minSdkVersion="23" android:targetSdkVersion="29" />
+<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -17,13 +17,13 @@
 
     <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
     <queries>
-
+<%queries-child-elements%>
     </queries>
     <application
         android:persistent="False"
         android:restoreAnyVersion="False"
         android:label="ChatFMX"
-        android:debuggable="true"
+        android:debuggable="True"
         android:largeHeap="False"
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme"
@@ -52,7 +52,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name="com.embarcadero.rtl.notifications.NotificationAlarm" />
+<receiver android:name="com.embarcadero.rtl.notifications.NotificationAlarm" />
 
     </application>
 </manifest>
